turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:26: error: not found: value length
	if(rule(indice % length)=='R'){
                         ^